--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
     restart: always
     environment:
       - DRONE_OPEN=true
-      - DRONE_HOST=$(DRONE_HOST)
+      - DRONE_HOST=${DRONE_HOST}
       - DRONE_GITHUB=true
-      - DRONE_GITHUB_CLIENT=$(DRONE_GITHUB_CLIENT)
-      - DRONE_GITHUB_SECRET=$(DRONE_GITHUB_SECRET)
-      - DRONE_SECRET=$(DRONE_SECRET)
+      - DRONE_GITHUB_CLIENT=${DRONE_GITHUB_CLIENT}
+      - DRONE_GITHUB_SECRET=${DRONE_GITHUB_SECRET}
+      - DRONE_SECRET=${DRONE_SECRET}
   drone-agent:
     image: drone/agent:0.8
     command: agent
@@ -25,4 +25,4 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DRONE_SERVER=drone-server:9000
-      - DRONE_SECRET=$(DRONE_SECRET)
+      - DRONE_SECRET=${DRONE_SECRET}
